# OneShotChannel

./: CMakeLists.txt  README.md
include/: OneShotChannel.hpp  OneShotFuture.hpp
tests/: oneshot_channel_tests.cpp  oneshot_future_tests.cpp
